# desk-reminder

./: .gitignore  README.en.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: .gitignore  build.yml  release.yml
bucket/: health-reminder.json
docs/: modification_plan.md
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs
src/i18n/: en-US.js  zh-CN.js
