[package]
name = "health-reminder"
version = "1.4.7"
description = "健康提醒助手 - 久坐、喝水、护眼提醒"
authors = ["you"]
edition = "2021"

[lib]
name = "desk_reminder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
url = "2"
# 移除了不再需要的 notify-rust
